CMAKE_MINIMUM_REQUIRED (VERSION 3.17)

PROJECT (PMT)

FIND_PACKAGE (spdlog REQUIRED)

INCLUDE (FindPkgConfig)

PKG_SEARCH_MODULE (SDL2 REQUIRED sdl2)

INCLUDE_DIRECTORIES (
    pmt
    ${SDL2_INCLUDE_DIRS}
)

ADD_EXECUTABLE (
    pmt
    ./src/main.cpp
    ./src/sdl2.cpp
)

SET_PROPERTY(TARGET pmt PROPERTY CXX_STANDARD 17)

TARGET_LINK_LIBRARIES (
    pmt
    ${SDL2_LIBRARIES}
    spdlog::spdlog
)
